fix ie11 group list items with overflowing/non-wrapping text (span child of group list item need max-width set so it wraps). width causes unwanted side-effects on the other list items.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -29,3 +29,10 @@
     height: $header-height;
   }
 }
+
+// IE11 fix for group list items with overflowing text
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .list-item > span {
+    max-width: 100%;
+  }
+}
